--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,7 +27,4 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
           
     - name: Build and push
-      uses: docker/build-push-action@v4
-      with:
-          push: true
-          tags: user/app:latest
+      run: docker push
