--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -20,11 +20,10 @@ jobs:
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag appsilon_task:$(date +%s)
       
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2
-      with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-          
-    - name: Build and push
-      run: docker push
+      
+    -  uses: mr-smithers-excellent/docker-build-push@v6
+       with:
+          image: thesochima/appsilon
+          registry: docker.io
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
