--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -19,10 +19,10 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag appsilon_task:$(date +%s)
-      
-      
-    -  uses: mr-smithers-excellent/docker-build-push@v6
-       with:
+            
+    - name: Build and Push Docker Image
+      uses: mr-smithers-excellent/docker-build-push@v6
+      with:
           image: thesochima/appsilon
           registry: docker.io
           username: ${{ secrets.DOCKER_USERNAME }}
