--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -17,13 +17,18 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag appsilon_task:$(date +%s)
-            
-    - name: Build and Push Docker Image
-      uses: mr-smithers-excellent/docker-build-push@v6
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1
       with:
-          image: thesochima/appsilon
-          registry: docker.io
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+    - name: Build and Push Docker image
+      uses: docker/build-push-action@v2
+      with:
+          context: .
+          push: true
+          tags: thesochima/appsilon:latest
